# trackline

./: .editorconfig  .gitignore  docker-compose.yml  trackline.code-workspace
.github/workflows/: backend.yml  ci.yml  database.yml  frontend.yml
backend/: .dockerignore  .flake8  Dockerfile  README.md  cli.py  fly.toml  main.py  pyproject.toml
backend/trackline/: app.py  configuration.py  constants.py  di.py  ioc.py  middleware.py
backend/trackline/auth/: constants.py  deps.py  ioc.py  models.py  repository.py  router.py  schemas.py
backend/trackline/auth/services/: repository.py
backend/trackline/auth/use_cases/: __init__.py  create_session.py  delete_session.py  get_session_user.py
backend/trackline/core/: background_tasks.py  deps.py  di.py  exceptions.py  fields.py  ioc.py  logging.py  middleware.py  schemas.py  settings.py  use_cases.py
backend/trackline/core/db/: client.py  models.py  repository.py  unit_of_work.py
backend/trackline/core/notifications/: __init__.py  channel_manager.py  notifier.py
backend/trackline/core/utils/: __init__.py  binding.py  response.py  security.py  version.py
backend/trackline/games/: constants.py  di.py  ioc.py  middleware.py  models.py  music_brainz.py  notifier.py  repository.py  router.py  schemas.py  string_similarity.py  track_provider.py  utils.py
backend/trackline/games/services/: game_notifier.py  game_stats_service.py  music_brainz.py  music_brainz_client.py  music_brainz_lookup.py  notifier.py  repository.py  scoring_service.py  track_cache.py  track_cleaner.py  track_fetcher.py  track_metadata_parser.py  track_provider.py
backend/trackline/games/services/notifications/: channel_manager.py  notification.py  notifier.py
backend/trackline/games/use_cases/: __init__.py  abort_game.py  base.py  buy_track.py  complete_turn.py  create_credits_guess.py  create_game.py  create_guess.py  create_release_year_guess.py  create_turn.py  exchange_track.py  get_game.py  get_game_users.py  get_games.py  get_user_stats.py  join_game.py  leave_game.py  pass_turn.py  propose_correction.py  register_notification_channel.py  replenish_track_cache.py  score_turn.py  start_game.py  unregister_notification_channel.py  vote_correction.py
backend/trackline/models/: auth.py  base.py  games.py  users.py
backend/trackline/routers/: auth.py  games.py  spotify.py  users.py
backend/trackline/schema/: auth.py  base.py  games.py  responses.py  spotify.py  users.py
backend/trackline/services/: mapper.py  notifier.py  repositories.py  spotify.py
backend/trackline/spotify/: client.py  di.py  ioc.py  models.py  router.py  schemas.py
backend/trackline/spotify/services/: auth_provider.py  client.py  spotify_client.py
backend/trackline/spotify/use_cases/: __init__.py  get_access_token.py  refresh_access_token.py
backend/trackline/use_cases/: auth.py  games.py  spotify.py  users.py
backend/trackline/users/: ioc.py  models.py  repository.py  router.py  schemas.py
backend/trackline/users/services/: repository.py
backend/trackline/users/use_cases/: __init__.py  create_user.py  get_current_user.py
backend/trackline/utils/: deps.py  fields.py  responses.py  security.py
database/: migrate-mongo-config.js  package-lock.json  package.json
database/migrations/: 20230727200507-session-rename-time-fields.js  20230727201132-ttl-indexes.js  20230727202718-unique-username.js  20230918154627-credits-guesses.js  20230924173731-credits-settings.js  20231117223640-title-match-mode.js  20240724213733-turn-revision-id.js  20241209220229-detailed-token-gain.js  20250620174038-playlist-object.js  20260120204806-enable-catchup.js  20260120223510-game-ttl-indexes.js  20260120225203-game-user-id-index.js  20260203214622-timeline-track-creation-time.js  20260203230053-release-year-guess-track-ids.js  20260206232204-game-settings-filter-stop-words.js  20260206235324-track-correction-spotify-track-id-index.js  20260418170906-join-code.js  20260426160447-turn-round-number.js  20260426211903-player-has-left.js  20260623230921-game-settings-convert-numbers.js
frontend/: .env  .eslintrc.cjs  .eslintrc.js  .prettierignore  .prettierrc.js  Caddyfile  Dockerfile  README.md  config-overrides.js  eslint.config.js  eslint.config.mjs  fly.toml  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/scripts/: .eslintrc.js  checkTranslations.js  checkTranslations.ts
frontend/src/: App.jsx  configuration.js  configuration.ts  constants.js  constants.ts  index.jsx  index.tsx  instrument.ts
frontend/src/api/spotify/: auth.js  auth.ts  error.js  errors.ts  index.js  instance.js  instance.ts  player.js  player.ts  playlists.js  playlists.ts  users.js  users.ts
frontend/src/api/trackline/: auth.js  auth.ts  error.js  errors.ts  games.js  games.ts  index.js  index.ts  instance.js  instance.ts  notifications.js  notifications.ts  spotify.js  spotify.ts  types.ts  users.js  users.ts
frontend/src/api/utils/: errors.ts  formatters.ts  interceptors.js  interceptors.ts  retry.ts
frontend/src/components/: App.jsx  App.tsx  ConfirmTrackModel.jsx  GuessTrackCard.jsx  PlayerInfo.jsx  StatusBar.jsx  Timeline.jsx  TrackCard.jsx  YearPicker.jsx
frontend/src/components/common/: ActionCard.tsx  AppLink.tsx  AppNavigate.tsx  ButtonFooter.jsx  ButtonFooter.tsx  ChipInput.jsx  (+53 more)
frontend/src/containers/: RootContainer.jsx
frontend/src/store/: actions.js  index.js  index.ts  rootReducer.ts
frontend/src/style/: globalStyles.js  globalStyles.ts  index.js  rankStyles.ts  theme.js  theme.ts
frontend/src/translations/: de.json  en.json  index.ts
frontend/src/types/: api.ts  auth.ts  axios.ts  errors.js  errors.ts  games.js  games.ts  mui.js  player.js  spotify.js  spotify.ts  store.ts  track.js  users.js
frontend/src/utils/: concurrency.js  concurrency.ts  confetti.js  confetti.ts  device.ts  errors.js  errors.ts  forms.js  forms.ts  games.js  games.ts  hooks.js  hooks.ts  i18n.js  i18n.ts  notifications.ts  routines.js  style.ts
frontend/src/views/: GameView.jsx
mongo/: keyfile
(+234 files in other folders)
