[project]
name = "trackline"
version = "0.1.0"
description = ""
authors = [
    {name = "Sören Oldag", email = "soeren_oldag@freenet.de"}
]
license = "MIT"
readme = "README.md"
requires-python = '>=3.13,<3.14'
dependencies = [
    'argon2-cffi (>=25.1.0,<26.0.0)',
    'async-spotify (>=0.4.4,<0.5.0)',
    'beanie (>=2.0.0,<3.0.0)',
    'decorator (>=5.1.1,<6.0.0)',
    'fastapi-injector (>=0.9.0,<0.10.0)',
    'fastapi[standard] (>=0.125.0,<0.126.0)',
    'httpx (>=0.28.1,<0.29.0)',
    'injector (>=0.23.0,<0.24.0)',
    'levenshtein (>=0.27.0,<0.28.0)',
    'lucene-querybuilder (>=0.2,<0.3)',
    'pydantic (>=2.5.1,<3.0.0)',
    'pydantic-settings (>=2.0.2,<3.0.0)',
    "pymongo (>=4.13.0,<5.0.0)",
    'python-dotenv (>=1.0.0,<2.0.0)',
    'sentry-sdk[aiohttp,fastapi,pymongo] (>=2.17.0,<3.0.0)',
    'toml (>=0.10.2,<0.11.0)',
    'unidecode (>=1.3.6,<2.0.0)',
    'uvicorn (>=0.38.0,<0.39.0)',
    'uvloop (>=0.22.1,<0.23.0)',
    'websockets (>=15.0,<16.0)',
]

[project.scripts]
cli = "cli:main"
trackline = "main:main"

[tool.poetry]
requires-poetry = '>=2.0.0,<3.0.0'

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.403"
ruff = "^0.14.10"
typer = "^0.20.1"
types-decorator = "^5.1.8.1"
types-toml = "^0.10.8.6"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportCallInDefaultInitializer = "error"
reportImplicitStringConcatenation = "error"
reportImportCycles = "error"
reportMatchNotExhaustive = "none"
reportMissingTypeStubs = "none"
reportPropertyTypeMismatch = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"

[tool.ruff]
extend-exclude = [
    "__pycache__",
    "build",
]

[tool.ruff.lint]
ignore = [
    "ARG",
    "COM812",
    "D",
    "EM101",
    "FAST003",
    "TRY003",
    "PLC0105"
]
select = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Header",
    "fastapi.params.Header",
    "fastapi.Query",
    "fastapi.params.Query",
]
